# SDL_Game_00

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Notas.md  Pikuma_00.code-workspace  README.md  Trash.md  compile_commands.json  conandata.yml  conanfile.txt  perf.data.old  vcpkg.json
Log/: System.md
My_Cmake/: Clang_setup.cmake  Compiler_Warnings.cmake  Conan.cmake  Conan_v1.cmake  Conan_v2.cmake  Graphics.cmake  MyLibs.cmake  Packaging.cmake  Sanitizers.cmake  Vcpkg_Find.cmake  Vcpkg_Target.cmake
SH_files_VS/: vs_Cmake_CDr
Source/: CMakeLists.txt
Source/Libs/: CMakeLists.txt
Source/Libs/Engine/Components/: AnimationComponent.hpp  ColliderComponent.hpp  ComponentBase.hpp  GraphicComponent.hpp  Point.hpp  RigidBodyComponent.h  TransformComponent.hpp
Source/Libs/Engine/Core/: Core.cpp  Core.hpp  Engine.cpp  Engine.h  Time.cpp  Time.h
Source/Libs/Engine/ECS/: Entity.cpp  Entity.hpp  GenID.cpp  GenID.hpp  Pool.hpp  Registry.cpp  Registry.hpp  System.cpp  System.hpp
Source/Libs/Engine/Graphics/: TextureManager.h
Source/Libs/Engine/Input/: Controller.cpp  Controller.h  InputSystem.cpp  InputSystem.h
Source/Libs/Engine/Maps/: Tile.hpp  TileMap.cpp  TileMap.hpp
Source/Libs/Engine/Parsers/: MapFileParser.cpp  MapFileParser.hpp
Source/Libs/Engine/Patterns/: Observer.cpp  Observer.h  Subject.cpp
Source/Libs/Engine/States/: State.cpp
Source/Libs/Engine/Systems/: CollisionSystem.cpp  CollisionSystem.hpp  MovementSystem.cpp  RenderColliderSystem.cpp  RenderColliderSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
Source/Libs/Engine/Utils/: Logger.h  Utils.hpp  Vector2D.h
Source/Main/: CMakeLists.txt  main.cpp
Source/Main/src/Actors/Player/: Player.cpp  Player.hpp
Source/Main/src/Characters/: Character.h  Player.cpp  Player.h
Source/Main/src/Components/: AnimationComponent.hpp  ColliderComponent.hpp  ComponentBase.hpp  GraphicComponent.hpp  RigidBodyComponent.h  Sprite.cpp  Sprite.h  SpriteComponent.h  TileComponent.hpp  Transform.hpp  TransformComponent.hpp
Source/Main/src/Core/: Component.hpp  Engine.cpp  Engine.h  Node.h  TextureManager.cpp  TextureManager.h  Time.cpp  Time.h
Source/Main/src/ECS/: ECS.cpp  ECS.hpp  Entity.cpp  Entity.hpp  GenID.cpp  GenID.hpp  Pool.hpp  Registry.cpp  Registry.hpp  System.cpp  System.hpp
Source/Main/src/Entities/: Entity.hpp
Source/Main/src/Game/: Game.cpp  Game.hpp  IGameObject.hpp
Source/Main/src/Graphics/: Graphics.cpp  Graphics.h  Sprite.cpp  Sprite.h  Texture.h  TextureManager.cpp  TextureManager.h
Source/Main/src/Input/: Controller.cpp  Controller.h  InputSystem.cpp  InputSystem.h
Source/Main/src/Levels/: Level.cpp  Level.h  LevelManager.cpp  LevelManager.hpp
Source/Main/src/Maps/: Tile.hpp  TileMap.cpp  TileMap.hpp
Source/Main/src/Parsers/: MapFileParser.cpp  MapFileParser.hpp  Player_Config.cpp  Player_Config.hpp
Source/Main/src/Patterns/: Observer.cpp  Observer.h  Subject.cpp  Subject.h
Source/Main/src/Physics/: RigidBody.h  Vector2D.h
Source/Main/src/Scenes/: Scene00.cpp  Scene00.hpp  SceneBase.cpp  SceneBase.hpp  SceneManager.cpp  SceneManager.hpp  SceneShip00.cpp  SceneShip00.hpp
Source/Main/src/States/: GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  MenuState.cpp  MenuState.h  State.cpp  State.h
Source/Main/src/States/Engine/: EngineState.hpp  GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  MenuState.cpp  MenuState.h
Source/Main/src/Systems/: AnimationSystem.cpp  AnimationSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderTileMapSystem.hpp
Source/Main/src/Utils/: Delegates.hpp  EnumComponentID.hpp  Logger.h  Utils.hpp  Vector2D.h
Source/Tools/: CMakeLists.txt  main.cpp
Source/Tools/src/: SystemInit.cpp  SystemInit.hpp
assets/: assets
assets/Datas/: data.db
assets/TileMaps/: Level_00.json  Level_01.json  SDL2.tiled-project  SDL2.tiled-session  full spritesheet.json  full tilemap.json
assets/config/: Levels.json  Player_Config copy.json
assets/images/Dungeon/Map/: Level_00_Map.json  Level_01_Map.tmj  full spritesheet.tsj
assets/tilemaps/TopDown/: 0x72_16x16DungeonTileset.v4.json  Zelda_Map.json
sh_Conan2/: Debug_CMake_C  Debug_CMake_CR  Debug_CMake_CR_Valgrind  Debug_CMake_GC
sh_Conan2/old/SH_files_VS/: Debug_CMake_BR
sh_vcpkg/: CMake_CDr
